# genfile

./: .gitignore  LICENSE  genfile.cabal
src/: Genfile.hs
src/Data/: Genfile.hs
src/Data/Genfile/: Render.hs  String.hs  Types.hs
src/Genfile/: Types.hs
