name: genfile
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/genfile
category: File
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Data.Genfile
        Data.Genfile.Types
    build-depends:
        base >=4.9 && <=5,
        path, 
        path-io, 
        mtl
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

test-suite genfile-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <=5,
        genfile -any
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude
    hs-source-dirs: test/
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall

source-repository head
  type:     git
  location: https://github.com/NorfairKing/genfile
