name: genfile
version: 0.0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2016 Tom Sydney Kerckhove
maintainer: syd.kerckhove@gmail.com
homepage: https://github.com/NorfairKing/genfile
category: File
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Data.Genfile
        Data.Genfile.Types
    build-depends:
        base >=4.9 && <=5,
        path, 
        path-io, 
        mtl
    default-language: Haskell2010
    hs-source-dirs: src/
    ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/NorfairKing/genfile
